@@ -253,8 +253,13 @@ private:
     ImVec2 m_WindowPosBackup;
     ImVec2 m_ViewportPosBackup;
     ImVec2 m_ViewportSizeBackup;
+# if IMGUI_VERSION_NUM > 18002
+    ImVec2 m_ViewportWorkPosBackup;
+    ImVec2 m_ViewportWorkSizeBackup;
+# else
     ImVec2 m_ViewportWorkOffsetMinBackup;
     ImVec2 m_ViewportWorkOffsetMaxBackup;
+# endif
 # endif
 };
 
