@@ -200,7 +200,11 @@ struct Style
         PivotAlignment          = ImVec2(0.5f, 0.5f);
         PivotSize               = ImVec2(0.0f, 0.0f);
         PivotScale              = ImVec2(1, 1);
+#if IMGUI_VERSION_NUM > 18101
+        PinCorners              = ImDrawFlags_RoundCornersAll;
+#else
         PinCorners              = ImDrawCornerFlags_All;
+#endif
         PinRadius               = 0.0f;
         PinArrowSize            = 0.0f;
         PinArrowWidth           = 0.0f;
